redesigned the xml screen as well as added in more core functionality. Going to design test videos to ensure these work.
Signed-off-by: dana haywood <dana haywood@AGR>

--- a/res/layout/activity_math.xml
+++ b/res/layout/activity_math.xml
@@ -1,74 +1,70 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/problemField"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
 
-    <TextView
-        android:id="@+id/problemTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="181dp"
-        android:text="@string/standAnswer"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical" >
+
+        <VideoView
+            android:id="@+id/tutorVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.25" />
+
+        <LinearLayout
+            android:id="@+id/Operations"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.07" >
+
+            <ImageButton
+                android:id="@+id/plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_search" />
+
+            <ImageButton
+                android:id="@+id/minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_search" />
+
+            <ImageButton
+                android:id="@+id/multiply"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_search" />
+
+            <ImageButton
+                android:id="@+id/divide"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_search" />
 
-    <EditText
-        android:id="@+id/answer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:inputType="textPersonName" >
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/problemTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/standAnswer"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <EditText
+            android:id="@+id/answer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberSigned" >
 
-        <requestFocus />
-    </EditText>
+            <requestFocus />
+        </EditText>
+
+        <ImageButton
+            android:id="@+id/answerBtn"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_action_search" />
 
-    <Button
-        android:id="@+id/plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/answer"
-        android:layout_marginTop="36dp"
-        android:text="@string/plus" />
-
-    <Button
-        android:id="@+id/minus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/plus"
-        android:layout_alignBottom="@+id/plus"
-        android:layout_toRightOf="@+id/plus"
-        android:text="@string/minus" />
-
-    <Button
-        android:id="@+id/divide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/minus"
-        android:layout_alignBottom="@+id/minus"
-        android:layout_toRightOf="@+id/answer"
-        android:text="@string/divide" />
-
-    <Button
-        android:id="@+id/multiply"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/divide"
-        android:layout_alignBottom="@+id/divide"
-        android:layout_alignRight="@+id/answer"
-        android:text="@string/multiply" />
-
-    <Button
-        android:id="@+id/answerBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/multiply"
-        android:layout_below="@+id/minus"
-        android:layout_marginRight="28dp"
-        android:layout_marginTop="50dp"
-        android:text="@string/answerBtn" />
-
-</RelativeLayout>
+    </LinearLayout>
