--- a/res/layout/dialog.xml
+++ b/res/layout/dialog.xml
@@ -1,10 +1,10 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="veryEasyBtn"
+        android:id="@+id/dialog"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
-
+
         <Button
             android:id="@+id/veryEasyBtn"
             android:layout_width="match_parent"
